grammar/lowParser.py
# Generated from grammar/low.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from compiler.compiler import Compiler
from compiler.function import Function
from memory.memory import Memory
from memory.constants import MemoryConstants
from semantics.types import Types
compiler = Compiler()




class lowParser ( Parser ):

    grammarFileName = "low.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'principal'", "'funcion'", 
                     "'regresa'", "'lee'", "'escribe'", "'si'", "'entonces'", 
                     "'sino'", "'mientras'", "'hacer'", "'desde'", "'hasta'", 
                     "'void'", "'var'", "'string'", "'char'", "'int'", "'float'", 
                     "'bool'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "','", "':'", "';'", "'='", "'&'", "'|'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "MAIN", "FUNCTION", "RETURN", 
                      "INPUT", "OUTPUT", "IF", "THEN", "ELSE", "WHILE", 
                      "DO", "FROM", "TO", "VOID", "VAR", "STRING", "CHAR", 
                      "INT", "FLOAT", "BOOL", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", 
                      "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_CURLY", "RIGHT_CURLY", 
                      "COMMA", "COLON", "SEMICOLON", "ASSIGN", "AND", "OR", 
                      "LESS", "LESS_OR_EQUAL", "GREATER", "GREATER_OR_EQUAL", 
                      "EQUAL", "NOT_EQUAL", "ADDITION", "SUBTRACTION", "MULTIPLICATION", 
                      "DIVISION", "STRING_CONSTANT", "CHAR_CONSTANT", "INT_CONSTANT", 
                      "FLOAT_CONSTANT", "BOOL_CONSTANT", "ID", "COMMENT_BLOCK", 
                      "COMMENT_LINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_variable_declaration = 1
    RULE_variables = 2
    RULE_declaration_array_brackets = 3
    RULE_data_type = 4
    RULE_constant = 5
    RULE_functions = 6
    RULE_function = 7
    RULE_function_type = 8
    RULE_parameters = 9
    RULE_logic_expresions = 10
    RULE_relational_expresions = 11
    RULE_addition_substraction_expresions = 12
    RULE_multiplication_division_expresions = 13
    RULE_expresion = 14
    RULE_array_brackets = 15
    RULE_function_call = 16
    RULE_main_function = 17
    RULE_statutes = 18
    RULE_assignation = 19
    RULE_read_function_call = 20
    RULE_write_function_call = 21
    RULE_void_function_call = 22
    RULE_return_statement = 23
    RULE_conditional_function = 24
    RULE_while_function = 25
    RULE_from_function = 26

    ruleNames =  [ "program", "variable_declaration", "variables", "declaration_array_brackets", 
                   "data_type", "constant", "functions", "function", "function_type", 
                   "parameters", "logic_expresions", "relational_expresions", 
                   "addition_substraction_expresions", "multiplication_division_expresions", 
                   "expresion", "array_brackets", "function_call", "main_function", 
                   "statutes", "assignation", "read_function_call", "write_function_call", 
                   "void_function_call", "return_statement", "conditional_function", 
                   "while_function", "from_function" ]

    EOF = Token.EOF
    PROGRAM=1
    MAIN=2
    FUNCTION=3
    RETURN=4
    INPUT=5
    OUTPUT=6
    IF=7
    THEN=8
    ELSE=9
    WHILE=10
    DO=11
    FROM=12
    TO=13
    VOID=14
    VAR=15
    STRING=16
    CHAR=17
    INT=18
    FLOAT=19
    BOOL=20
    LEFT_PARENTHESIS=21
    RIGHT_PARENTHESIS=22
    LEFT_BRACKET=23
    RIGHT_BRACKET=24
    LEFT_CURLY=25
    RIGHT_CURLY=26
    COMMA=27
    COLON=28
    SEMICOLON=29
    ASSIGN=30
    AND=31
    OR=32
    LESS=33
    LESS_OR_EQUAL=34
    GREATER=35
    GREATER_OR_EQUAL=36
    EQUAL=37
    NOT_EQUAL=38
    ADDITION=39
    SUBTRACTION=40
    MULTIPLICATION=41
    DIVISION=42
    STRING_CONSTANT=43
    CHAR_CONSTANT=44
    INT_CONSTANT=45
    FLOAT_CONSTANT=46
    BOOL_CONSTANT=47
    ID=48
    COMMENT_BLOCK=49
    COMMENT_LINE=50
    WHITESPACE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(lowParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(lowParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(lowParser.SEMICOLON, 0)

        def functions(self):
            return self.getTypedRuleContext(lowParser.FunctionsContext,0)


        def main_function(self):
            return self.getTypedRuleContext(lowParser.Main_functionContext,0)


        def variable_declaration(self):
            return self.getTypedRuleContext(lowParser.Variable_declarationContext,0)


        def getRuleIndex(self):
            return lowParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = lowParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(lowParser.PROGRAM)
            self.state = 55
            self.match(lowParser.ID)
            compiler.add_function(compiler.current_function)
            self.state = 57
            self.match(lowParser.SEMICOLON)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lowParser.VAR:
                self.state = 58
                self.variable_declaration()


            compiler.goto_main()
            self.state = 62
            self.functions()
            self.state = 63
            self.main_function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(lowParser.VAR, 0)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lowParser.VariablesContext)
            else:
                return self.getTypedRuleContext(lowParser.VariablesContext,i)


        def getRuleIndex(self):
            return lowParser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)




    def variable_declaration(self):

        localctx = lowParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variable_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(lowParser.VAR)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.variables()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << lowParser.STRING) | (1 << lowParser.CHAR) | (1 << lowParser.INT) | (1 << lowParser.FLOAT) | (1 << lowParser.BOOL))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._data_type = None # Data_typeContext
            self._ID = None # Token

        def data_type(self):
            return self.getTypedRuleContext(lowParser.Data_typeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(lowParser.ID)
            else:
                return self.getToken(lowParser.ID, i)

        def SEMICOLON(self):
            return self.getToken(lowParser.SEMICOLON, 0)

        def declaration_array_brackets(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lowParser.Declaration_array_bracketsContext)
            else:
                return self.getTypedRuleContext(lowParser.Declaration_array_bracketsContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(lowParser.COMMA)
            else:
                return self.getToken(lowParser.COMMA, i)

        def getRuleIndex(self):
            return lowParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)




    def variables(self):

        localctx = lowParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            localctx._data_type = self.data_type()
            self.state = 72
            localctx._ID = self.match(lowParser.ID)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lowParser.LEFT_BRACKET:
                self.state = 73
                self.declaration_array_brackets()


            compiler.current_function.update_variables((None if localctx._data_type is None else self._input.getText(localctx._data_type.start,localctx._data_type.stop)), (None if localctx._ID is None else localctx._ID.text))
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==lowParser.COMMA:
                self.state = 77
                self.match(lowParser.COMMA)
                self.state = 78
                localctx._ID = self.match(lowParser.ID)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==lowParser.LEFT_BRACKET:
                    self.state = 79
                    self.declaration_array_brackets()


                compiler.current_function.update_variables((None if localctx._data_type is None else self._input.getText(localctx._data_type.start,localctx._data_type.stop)), (None if localctx._ID is None else localctx._ID.text))
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(lowParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_array_bracketsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACKET(self):
            return self.getToken(lowParser.LEFT_BRACKET, 0)

        def RIGHT_BRACKET(self):
            return self.getToken(lowParser.RIGHT_BRACKET, 0)

        def INT_CONSTANT(self):
            return self.getToken(lowParser.INT_CONSTANT, 0)

        def getRuleIndex(self):
            return lowParser.RULE_declaration_array_brackets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_array_brackets" ):
                listener.enterDeclaration_array_brackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_array_brackets" ):
                listener.exitDeclaration_array_brackets(self)




    def declaration_array_brackets(self):

        localctx = lowParser.Declaration_array_bracketsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration_array_brackets)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(lowParser.LEFT_BRACKET)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lowParser.INT_CONSTANT:
                self.state = 91
                self.match(lowParser.INT_CONSTANT)


            self.state = 94
            self.match(lowParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(lowParser.INT, 0)

        def BOOL(self):
            return self.getToken(lowParser.BOOL, 0)

        def FLOAT(self):
            return self.getToken(lowParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(lowParser.STRING, 0)

        def CHAR(self):
            return self.getToken(lowParser.CHAR, 0)

        def getRuleIndex(self):
            return lowParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)




    def data_type(self):

        localctx = lowParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << lowParser.STRING) | (1 << lowParser.CHAR) | (1 << lowParser.INT) | (1 << lowParser.FLOAT) | (1 << lowParser.BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._BOOL_CONSTANT = None # Token
            self._FLOAT_CONSTANT = None # Token
            self._INT_CONSTANT = None # Token
            self._CHAR_CONSTANT = None # Token
            self._STRING_CONSTANT = None # Token

        def BOOL_CONSTANT(self):
            return self.getToken(lowParser.BOOL_CONSTANT, 0)

        def FLOAT_CONSTANT(self):
            return self.getToken(lowParser.FLOAT_CONSTANT, 0)

        def INT_CONSTANT(self):
            return self.getToken(lowParser.INT_CONSTANT, 0)

        def CHAR_CONSTANT(self):
            return self.getToken(lowParser.CHAR_CONSTANT, 0)

        def STRING_CONSTANT(self):
            return self.getToken(lowParser.STRING_CONSTANT, 0)

        def getRuleIndex(self):
            return lowParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)




    def constant(self):

        localctx = lowParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constant)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lowParser.BOOL_CONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                localctx._BOOL_CONSTANT = self.match(lowParser.BOOL_CONSTANT)
                compiler.add_constant_operand((None if localctx._BOOL_CONSTANT is None else localctx._BOOL_CONSTANT.text), Types.BOOL)
                pass
            elif token in [lowParser.FLOAT_CONSTANT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                localctx._FLOAT_CONSTANT = self.match(lowParser.FLOAT_CONSTANT)
                compiler.add_constant_operand((None if localctx._FLOAT_CONSTANT is None else localctx._FLOAT_CONSTANT.text), Types.FLOAT)
                pass
            elif token in [lowParser.INT_CONSTANT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                localctx._INT_CONSTANT = self.match(lowParser.INT_CONSTANT)
                compiler.add_constant_operand((None if localctx._INT_CONSTANT is None else localctx._INT_CONSTANT.text), Types.INT)
                pass
            elif token in [lowParser.CHAR_CONSTANT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                localctx._CHAR_CONSTANT = self.match(lowParser.CHAR_CONSTANT)
                compiler.add_constant_operand((None if localctx._CHAR_CONSTANT is None else localctx._CHAR_CONSTANT.text), Types.CHAR)
                pass
            elif token in [lowParser.STRING_CONSTANT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                localctx._STRING_CONSTANT = self.match(lowParser.STRING_CONSTANT)
                compiler.add_constant_operand((None if localctx._STRING_CONSTANT is None else localctx._STRING_CONSTANT.text), Types.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lowParser.FunctionContext)
            else:
                return self.getTypedRuleContext(lowParser.FunctionContext,i)


        def getRuleIndex(self):
            return lowParser.RULE_functions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions" ):
                listener.enterFunctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions" ):
                listener.exitFunctions(self)




    def functions(self):

        localctx = lowParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==lowParser.FUNCTION:
                self.state = 110
                self.function()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._function_type = None # Function_typeContext
            self._ID = None # Token

        def FUNCTION(self):
            return self.getToken(lowParser.FUNCTION, 0)

        def function_type(self):
            return self.getTypedRuleContext(lowParser.Function_typeContext,0)


        def ID(self):
            return self.getToken(lowParser.ID, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(lowParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(lowParser.RIGHT_PARENTHESIS, 0)

        def LEFT_CURLY(self):
            return self.getToken(lowParser.LEFT_CURLY, 0)

        def statutes(self):
            return self.getTypedRuleContext(lowParser.StatutesContext,0)


        def RIGHT_CURLY(self):
            return self.getToken(lowParser.RIGHT_CURLY, 0)

        def parameters(self):
            return self.getTypedRuleContext(lowParser.ParametersContext,0)


        def variable_declaration(self):
            return self.getTypedRuleContext(lowParser.Variable_declarationContext,0)


        def getRuleIndex(self):
            return lowParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = lowParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(lowParser.FUNCTION)
            self.state = 117
            localctx._function_type = self.function_type()
            self.state = 118
            localctx._ID = self.match(lowParser.ID)
            compiler.current_function=Function((None if localctx._function_type is None else self._input.getText(localctx._function_type.start,localctx._function_type.stop)), (None if localctx._ID is None else localctx._ID.text), [], {}, function_memory=Memory(MemoryConstants.LOCAL_INITIAL))
            self.state = 120
            self.match(lowParser.LEFT_PARENTHESIS)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << lowParser.STRING) | (1 << lowParser.CHAR) | (1 << lowParser.INT) | (1 << lowParser.FLOAT) | (1 << lowParser.BOOL))) != 0):
                self.state = 121
                self.parameters()


            self.state = 124
            self.match(lowParser.RIGHT_PARENTHESIS)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lowParser.VAR:
                self.state = 125
                self.variable_declaration()


            compiler.add_function(compiler.current_function)
            self.state = 129
            self.match(lowParser.LEFT_CURLY)
            self.state = 130
            self.statutes()
            self.state = 131
            self.match(lowParser.RIGHT_CURLY)
            compiler.end_function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(lowParser.Data_typeContext,0)


        def VOID(self):
            return self.getToken(lowParser.VOID, 0)

        def getRuleIndex(self):
            return lowParser.RULE_function_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_type" ):
                listener.enterFunction_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_type" ):
                listener.exitFunction_type(self)




    def function_type(self):

        localctx = lowParser.Function_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lowParser.STRING, lowParser.CHAR, lowParser.INT, lowParser.FLOAT, lowParser.BOOL]:
                self.state = 134
                self.data_type()
                pass
            elif token in [lowParser.VOID]:
                self.state = 135
                self.match(lowParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._data_type = None # Data_typeContext
            self._ID = None # Token
